# bmpwatch

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
data/: as_names_cymru.txt  routeviews_peers.tsv
docs/: bmpdoctor-observatory-vision.md  bmpwatch-observatory-vision.md  caida-kafka-verification.md  frr-local-bmp-lab.md  future-issues.md  openbmp-kafka-capture.md  pcap-support.md  protocol-references.md  real-sample-validation.md  release.md  replay-watch-design.md  routeviews-kafka-verification.md  routeviews.md  sources.md  validation-checklist.md
docs/checkpoints/: 2026-05-22-prototype-state.md
docs/screenshots/: .gitkeep
labs/frr-bmp/: docker-compose.yml
labs/frr-bmp/frr1/: daemons  frr.conf
labs/frr-bmp/frr2/: daemons  frr.conf
record_openbmp_kafka/: Cargo.toml
record_openbmp_kafka/src/: main.rs
src/: as_names.txt  asnames.rs  browser.rs  cli.rs  dashboard.rs  doctor.rs  error.rs  event.rs  input.rs  kafka.rs  lib.rs  lint.rs  main.rs  obmp_reader.rs  obmp_writer.rs  peering.rs  raw_bmp.rs  report.rs  rolling.rs  rpki.rs  state.rs
tests/: dashboard_pty_tests.rs
tests/fixtures/: README.md  init-term-tlvs.bmpd  init-term-tlvs.rawbmp  openbmp-two-records.bmpd  peer-up-down.rawbmp  stats-report.rawbmp
tests/fixtures/malformed/: bad-magic.bmpd  bad-version.rawbmp  truncated-per-peer-header.rawbmp  truncated-record-length.bmpd
