[workspace]
members = [".", "record_openbmp_kafka"]

[package]
name = "bmpwatch"
version = "0.1.0"
edition = "2021"
description = "Live and recorded BGP Monitoring Protocol stream viewer and diagnostic tool"
license = "MIT"
repository = "https://github.com/downwithbgp/bmpwatch"

[[bin]]
name = "bmpwatch"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bgpkit-parser = "0.16"
bytes = "1"
hex = "0.4"
rdkafka = "0.36"
ctrlc = "3"
ratatui = "0.30"
regex = "1"
ureq = "3"

[dev-dependencies]
tempfile = "3"
portable-pty = "0.8"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
