[workspace]
members = [".", "record_openbmp_kafka"]

[package]
name = "bmpwatch"
version = "0.1.1"
edition = "2021"
description = "Terminal-native RouteViews BMP stream monitor with RPKI validation"
license = "MIT"
repository = "https://github.com/downwithbgp/bmpwatch"
readme = "README.md"
keywords = ["bgp", "bmp", "rpki", "routeviews", "tui"]
categories = ["command-line-utilities", "network-programming"]
exclude = [
    ".github/",
    "ARCHITECTURE.md",
    "dist-workspace.toml",
    "docs/*.md",
    "docs/checkpoints/",
    "labs/",
]

[[bin]]
name = "bmpwatch"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bgpkit-parser = "0.16"
bytes = "1"
hex = "0.4"
rdkafka = "0.36"
ctrlc = "3"
ratatui = "0.30"
regex = "1"
ureq = "3"

[dev-dependencies]
tempfile = "3"
portable-pty = "0.8"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
